--- a/style/games_style.css
+++ b/style/games_style.css
@@ -320,16 +320,6 @@ div.bottom-inner-wrapper:last-of-type{
 	font-size: 16px;
 	font-weight: bold;
 }
-.result p{
-	height: 30px;
-	margin-bottom: 5px;
-	padding-left: 0;
-	font-size: 12px;
-	font-style: italic;
-}
-.result p:nth-of-type(2){
-	padding-top: 10px;
-}
 .result label input, .result li input{
 	visibility: hidden;
 	position: absolute;
@@ -351,6 +341,8 @@ div.bottom-inner-wrapper:last-of-type{
 	margin: 0;
 	padding: 0;	
 	display: inline-block;
+	position: absolute;
+	z-index: 10;
 }
 .result-wrapper ul li{
 	width: 30px;
@@ -388,26 +380,44 @@ div.bottom-inner-wrapper:last-of-type{
 }
 .ratings div{
 	display: inline-block;
-}	
-.ratings label img{
+}
+.ratings label{
+	position: absolute;
+	z-index: 5;
+}
+.result label img{
 	width: 30px;
 	height: 30px;
+	margin-top: 40px;
 	position: relative;
 	margin-left: 0;
 	background: #e43f3f;
 	cursor: pointer;
 }
-.ratings-wrapper input{
+.result label img.active{
+	background: #363636;
+}
+.ratings-wrapper input, .ratings-wrapper p{
 	width: 101px;
 	height: 30px;
-	padding-left: 15px;
+	padding: 0;
 	margin-left: 15px;
 	margin-bottom: 10px;
 	background: #e43f3f;
 	color: #fff;
 	font-size: 12px;
-	font-weight: normal;
-	font-style: italic;
+	font-weight: bold;
+}
+.ratings-wrapper input.report-match-button{
+	background: #1182f5;
+}
+.ratings-wrapper p{
+	margin-top: -30px;
+	padding-top: 6px;
+	background: #363636;
+}
+.ratings p {
+	margin-top: 0;
 }
 .ratings-wrapper{
 	padding: 0;
@@ -444,7 +454,7 @@ div.bottom-inner-wrapper:last-of-type{
 	font-style: italic;
 	border: none;
 }
-.report-match-wrapper.upload-media input[type="submit"]:hover{
+.report-match-wrapper.upload-media input[type="submit"]:hover, .result-sumbit input[type="submit"]:hover, .ratings-wrapper input.report-match-button:hover{
 	background: #363636;
 }
 .report-match-wrapper .topic-wrapper .text-holder{
@@ -478,16 +488,49 @@ div.bottom-inner-wrapper:last-of-type{
 .report-match-wrapper .support-text-box{
 	padding: 15px;
 }
-.report input{
+.result-sumbit input{
 	width: 101px;
 	height: 30px;
-	float: right;
-	background: #363636;
+	padding: 0;
 	color: #fff;
 	text-align: center;
-	font-weight: normal;
-	font-style: italic;
 	font-size: 12px;
+}
+.bottom-inner-wrapper h3{
+	height: 30px;
+	margin: 10px 0;
+	padding-top: 8px;
+	background: #363636;
+	color: #fff;
+	font-weight: bold;
+	font-size: 12px;
+}
+.report-list{
+	font-size: 12px;
+	font-style: italic;
+	list-style: none;
+	padding: 0;
+}
+.report-list li{
+	padding: 0 0 10px 0;
+	cursor: pointer;
+}
+.report-list img{
+	width: 20px;
+}
+.report-read li{
+	margin-bottom: 15px;
+	cursor: pointer;
+}
+.report-read a{
+	text-decoration: none;
+	color: #333;
+}
+.report-read span{
+	float: right;
+}
+.report-read li a:hover, .report-read li span:hover{
+	color: #e43f3f;
 }
 .players-wrapper div p{
 	width: 120px;
@@ -601,11 +644,67 @@ p.chat-message{
 .right-banner{
 	margin-top: 20px; 
 }
+#clock{
+	margin-top: 20px;
+	padding-top: 0;
+}
+.flip-clock-wrapper{
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+.flip-clock-wrapper ul {
+	width: 9%;
+	height: 38px;
+	margin: 0 2px;
+	padding: 0;
+}
+.flip-clock-wrapper ul li {
+	line-height: 38px;
+}
+.flip-clock-wrapper ul li a div div.inn {
+	border-radius: 3px;
+	font-size: 25px;
+}
+.flip-clock-wrapper ul li a div.down {
+	border-bottom-left-radius: 3px;
+	border-bottom-right-radius: 3px;
+}
+.flip-clock-wrapper ul li a div.up:after {
+	top: 38px;
+	height: 2px;
+}
+.flip-clock-dot.top {
+	top: 10px;
+}
+.flip-clock-dot.bottom {
+	bottom: 0;
+	top: 25px;
+}
+.flip-clock-dot{
+	width: 5px;
+	height: 5px;
+	left: 20%;
+}
+.flip-clock-divider {
+	width: 4%;
+	height: 45px;
+}
+.flip-clock-divider .flip-clock-label{
+	font-size: 12px;
+	right: -40px;
+}
+.flip-clock-divider.minutes .flip-clock-label{
+	right: -50px;
+}
+.flip-clock-divider.seconds .flip-clock-label{
+	right: -50px;
+}
 @media screen and (min-width: 480px){
 	.ratings{
 		width: auto;
 	}
-	.ratings-wrapper input{
+	.ratings-wrapper input, .ratings-wrapper p, .result-sumbit input{
 		width: 97%;
 	}
 	.left-input{
@@ -613,23 +712,46 @@ p.chat-message{
 		padding-left: 7px;
 	}
 	.right-input{
-		padding-left: 42px;
+		padding-left: 35%;
 	}
 	.game-payment-wrapper form #acceptPaymentTerms + label span{
 		margin: 3px 60px 0 0;
+	}
+	.flip-clock-wrapper ul {
+		width: 9.9%;
+		height: 56px;
+	}
+	.flip-clock-wrapper ul li {
+		line-height: 58px;
+	}
+	.flip-clock-wrapper ul li a div div.inn {
+		font-size: 36px;
+	}
+	.flip-clock-dot.top {
+		top: 18px;
+	}
+	.flip-clock-dot.bottom {
+		bottom: 0;
+		top: 33px;
+	}
+	.flip-clock-dot{
+		left: 35%;
+	}
+	.flip-clock-divider .flip-clock-label{
+		right: -60px;
+	}
+	.flip-clock-divider.minutes .flip-clock-label{
+		right: -70px;
+	}
+	.flip-clock-divider.seconds .flip-clock-label{
+		right: -70px;
 	}
 }
 @media screen and (min-width: 640px){
 	.report-match-wrapper.upload-media img{
 		margin: 0 0 2px 0;
 	}
-	.right-input{
-		padding-left: 65px;
-	}
-	.ratings{
-		width: 155px;
-	}
-	.report input{
+	.result-sumbit input{
 		width: 138px;
 	}
 	.report-match-wrapper.upload-media input[type="submit"]{
@@ -641,6 +763,15 @@ p.chat-message{
 	}
 }
 @media screen and (min-width: 768px){
+	.report-read li{
+		margin-bottom: 0;
+	}
+	div.left-buffer{
+		padding-left: 0;
+	}
+	.bottom-players{
+		padding-left: 15px;
+	}
 	.top-row ul li{
 		margin-bottom: 0;
 	}
@@ -678,14 +809,11 @@ p.chat-message{
 	.ratings-wrapper{
 		margin-left: 29px;
 	}
-	.ratings-wrapper input{
+	.ratings-wrapper input, .ratings-wrapper p{
 		width: 98%;
 	}
 	.left-input{
-		margin-left: 4px;
-	}
-	.right-input{
-		padding-left: 10px;
+		margin-left: 6px;
 	}
 	.ratings{
 		width: auto;
@@ -693,7 +821,7 @@ p.chat-message{
 	.report{
 		margin-top: -40px
 	}
-	.report input{
+	.result-sumbit input{
 		width: 95px;
 	}
 	.match-info.game-chat{
@@ -718,24 +846,46 @@ p.chat-message{
 	.game-payment-wrapper form #acceptPaymentTerms + label span{
 		margin: -7px -30px 0 0;
 	}
+	.flip-clock-wrapper{
+		width: 71%;
+		margin-left: 15%;
+	}
+	.flip-clock-divider .flip-clock-label{
+		right: -65px;
+	}
+	.result-sumbit{
+		padding: 0;
+	}
+	.result-sumbit input{
+		float: right;
+	}
 }
 @media screen and (min-width: 990px){
-	.ratings-wrapper input{
+	div.left-buffer{
+		padding-left: 30px;
+	}
+	.bottom-players{
+		padding-left: 60px;
+	}
+	.result{
+		padding-left: 24%;
+	}
+	.ratings-wrapper input, .ratings-wrapper p{
 		width: 90.5%;
 	}
 	.left-input{
-		margin-left: -28px;
+		margin-left: 15px;
 	}
 	.right-input{
-		padding-left: 42px;
+		padding-left: 15%;
 	}
 	.ratings-wrapper{
-		margin-left: 2px;
+		margin-left: 2%;
 	}
 	.versus{
 		padding-left: 57px;
 	}
-	.report input{
+	.result-sumbit input{
 		width: 125px;
 	}
 	.match-info.game-chat p{
@@ -761,6 +911,33 @@ p.chat-message{
 	.report{
 		padding: 0;
 	}
+	#clock{
+		margin-top: 0;
+	}
+	.flip-clock-wrapper {
+	    width: 40%;
+	    margin-left: 1.5%;
+	    float: right;
+	}
+	.flip-clock-wrapper ul {
+		width: 9.85%;
+		height: 54px;
+	}
+	.flip-clock-wrapper ul li {
+		line-height: 56px;
+	}
+	.flip-clock-wrapper ul li a div div.inn {
+		font-size: 42px;
+	}
+	.flip-clock-divider .flip-clock-label{
+		right: -55px;
+	}
+	.flip-clock-divider.minutes .flip-clock-label{
+		right: -60px;
+	}
+	.flip-clock-divider.seconds .flip-clock-label{
+		right: -60px;
+	}
 }
 @media screen and (min-width: 1024px){
 	.games-menu img{
@@ -768,6 +945,12 @@ p.chat-message{
 	}
 }
 @media screen and (min-width: 1200px){
+	.left-input{
+		margin-left: 8px;
+	}
+	.bottom-players{
+		padding-left: 0;
+	}
 	.player-box-bar{
 		margin-left: 16px;  
 	}
@@ -794,12 +977,6 @@ p.chat-message{
 	.bottom-main{
 		padding: 0 50px;
 	}
-	.left-input{
-		margin-left: -34px;
-	}
-	.right-input{
-		padding-left: 49px;
-	}
 	.ratings-wrapper{
 		margin-left: 0;
 	}
@@ -821,5 +998,14 @@ p.chat-message{
 	}
 	.versus{
 		padding-left: 55px;
+	}
+	.flip-clock-divider .flip-clock-label{
+		right: -65px;
+	}
+	.flip-clock-divider.minutes .flip-clock-label{
+		right: -70px;
+	}
+	.flip-clock-divider.seconds .flip-clock-label{
+		right: -70px;
 	}
 }
