--- a/style/games_style.css
+++ b/style/games_style.css
@@ -282,7 +282,7 @@ div.bottom-inner-wrapper:last-of-type{
 	background: #d8d8d8;
 }
 .game-box-bar .box-bar-cover{
-	background: #e43f3f;
+	background: #363636;
 }
 .game-box-bar .badge{
 	position: absolute;
