--- a/style/games_style.css
+++ b/style/games_style.css
@@ -219,6 +219,9 @@
 	color: #fff;
 	text-shadow: 0 1px 2px #fff;
 }
+.middle-row-games div.deadline .flip-clock-wrapper ul{
+	background: #e43f3f;
+}
 .middle-row-games .middle-info{
 	background: #fff;
 	box-shadow: none;
