--- a/style/games_style.css
+++ b/style/games_style.css
@@ -219,7 +219,7 @@
 	color: #fff;
 	text-shadow: 0 1px 2px #fff;
 }
-.middle-row-games div.deadline .flip-clock-wrapper ul{
+.middle-row-games div.deadline ul.flip{
 	background: #e43f3f;
 }
 .middle-row-games .middle-info{
